--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    background-color: gray;
+}
 body {
     background-color: #7ac5cd;
         text-align: center;
@@ -9,15 +12,23 @@ button {
 }
 
 .top-bar {
-    background-color: purple;
+    /* background-color: purple; */
+    background-color: #FF50FF50;
 }
 
 .content {
-    background-color: red;
+    background-color: #FF50FF50;
 }
 
 
 img {
     width: 25%;
     height: auto;
+}
+
+iframe {
+    overflow: visible;
+    background-color: green;
+    width: 100%;
+    height: 500px;
 }
