--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ button {
     /* background-color: #FF50FF50; */
 }
 
+.side_and_main {
+    display: flex;
+}
+
 
 img {
     width: 25%;
@@ -28,8 +32,10 @@ img {
 }
 
 iframe {
-    overflow: visible;
-    background-color: green;
     width: 100%;
-    height: 500px;
+    height: 5000px;
+}
+
+p {
+    background-color: green;
 }
