--- a/style.css
+++ b/style.css
@@ -39,3 +39,9 @@ iframe {
 p {
     background-color: green;
 }
+
+body {
+    background-image: url("https://external-preview.redd.it/1MuiO5_KW_8rfN3AEGdRxU-p1VEcaQi4bdLb5rBvtjg.png?format=pjpg&auto=webp&s=83247025c60f25bb81bb989c376c58bb9613cd4c");
+    background-repeat: repeat;
+    background-size: 200px 100px;
+}
