--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ button {
 
 .content {
     /* background-color: #FF50FF50; */
-    background-color: #7ac5cdCC;
+    background-color: #FaC5CdCC;
 }
 
 .side_and_main {
@@ -44,4 +44,8 @@ body {
     background-image: url("https://external-preview.redd.it/1MuiO5_KW_8rfN3AEGdRxU-p1VEcaQi4bdLb5rBvtjg.png?format=pjpg&auto=webp&s=83247025c60f25bb81bb989c376c58bb9613cd4c");
     background-repeat: repeat;
     background-size: 200px 100px;
+}
+
+ul {
+    display: inline-block;
 }
