--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     /* background-color: gray; */
     font-family: "Comic Sans MS", "Comic Sans";
+    cursor: url(https://i.pinimg.com/originals/60/9f/79/609f79c036f54c4564ab72e0f89df98f.gif);
 }
 body {
         text-align: center;
@@ -19,10 +20,16 @@ button {
 .content {
     /* background-color: #FF50FF50; */
     background-color: #FaC5CdCC;
+    /* width: 75%; */
+    /* display: inline-block; */
 }
 
 .side_and_main {
     display: flex;
+}
+
+.blog_list {
+    /* background-size: 50px 50px; */
 }
 
 
@@ -33,7 +40,7 @@ img {
 
 iframe {
     width: 100%;
-    height: 5000px;
+    height: 500px;
 }
 
 p {
@@ -48,4 +55,24 @@ body {
 
 ul {
     display: inline-block;
+}
+
+.top_and_content {
+    background-image: url(https://i.pinimg.com/originals/60/9f/79/609f79c036f54c4564ab72e0f89df98f.gif);
+    background-repeat: repeat;
+    background-size: 100px auto;
+    width: 50%;
+    display: inline-block;
+}
+
+.top_and_content::before {
+    /* content: ""; */
+    /* background-image: url(https://i.pinimg.com/originals/60/9f/79/609f79c036f54c4564ab72e0f89df98f.gif); */
+    /* background-repeat: repeat; */
+    /* background-size: 200px auto; */
+    /* top: 0px; */
+    /* right: 0px; */
+    /* bottom: 0px; */
+    /* left: 0px; */
+    /* opacity: 0.75; */
 }
