--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ button {
     background-color: #FaC5CdCC;
     /* width: 75%; */
     /* display: inline-block; */
+    height: 100%;
 }
 
 .side_and_main {
@@ -35,13 +36,14 @@ button {
 
 
 img {
-    width: 25%;
+    width: 60%;
     height: auto;
 }
 
 iframe {
     width: 100%;
-    height: 500px;
+    height: 90vh;
+    border: 0;
 }
 
 p {
@@ -62,7 +64,7 @@ ul {
     background-image: url(https://i.pinimg.com/originals/60/9f/79/609f79c036f54c4564ab72e0f89df98f.gif);
     background-repeat: repeat;
     background-size: 100px auto;
-    width: 50%;
+    width: 70%;
     display: inline-block;
 }
 
