--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ ul {
 }
 
 .top_and_content {
-    background-image: url(https://i.pinimg.com/originals/60/9f/79/609f79c036f54c4564ab72e0f89df98f.gif);
+    /* background-image: url(https://i.pinimg.com/originals/60/9f/79/609f79c036f54c4564ab72e0f89df98f.gif); */
     background-repeat: repeat;
     background-size: 100px auto;
     width: 70%;
